[Cronet] Fix race with NetLogWithNetworkChangeEvents registration with NCN

The NetLogWithNetworkChangeEvents needs to wait to register with the
NetworkChangeNotifier until it is created, otherwise registration silently
fails and the NetLog does not contain network change events.

BUG=623037
R=xunjieli

Review-Url: https://codereview.chromium.org/2098753002
Cr-Commit-Position: refs/heads/master@{#402155}

Former-commit-id: 03226f05445777d5b15f9a33f47cf43abb8d06c3